--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
     rel="stylesheet"
   />
-  <title>React App</title>
+  <title>GoiStore</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
